--- a/requirements.txt
+++ b/requirements.txt
@@ -19,7 +19,7 @@ networkx==2.3
 numpy==1.16.3
 nvidia-ml-py3==7.352.0
 pandas==0.25.0
-Pillow==6.1.0
+Pillow>=6.2.0
 pkg-resources==0.0.0
 protobuf==3.9.0
 psutil==5.6.3
